[features]
nightly = ["pulp/nightly"]
# Treat warnings as a build error.
strict = []
default = []

[package]
name = "cheb"
version = "0.1.0-dev"
edition = "2024"
authors = ["Timo Betcke <timo.betcke@gmail.com>"]
description = "Chebychev interpolation and evaluation."
license = "MIT & Apache"
homepage = "https://github.com/bempp/cheb"
repository = "https://github.com/bempp/cheb"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "cheb"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
approx = { version = "0.5", features = ["num-complex"] }
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
rand = "0.8.5"
itertools = { version = "0.13.0", default-features = false }
coe-rs = "0.1.2"
pulp = { version = "0.21" }
bytemuck = "1.16.0"
hexf = "0.2.1"
num = "0.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand_chacha = "0.3"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
wildcard_imports = "forbid"

[target.aarch64-apple-darwin.dev-dependencies]
blas-src = { version = "0.10", features = ["accelerate"]}
lapack-src = { version = "0.10", features = ["accelerate"]}

[target.x86_64-unknown-linux-gnu.dev-dependencies]
blas-src = { version = "0.10", features = ["blis"]}
lapack-src = { version = "0.10", features = ["netlib"]}


